// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorAssetHeader test load file test load file into assetTree 1`] = `
<article
  className="asset-content"
>
  <article
    className="file-item "
    onClick={[Function]}
  >
    <img
      onDragStart={[Function]}
      src="newImg.png"
    />
    <span
      className="item-text"
    >
      loadImg
    </span>
  </article>
  <article
    className="file-item "
    onClick={[Function]}
  >
    <img
      onDragStart={[Function]}
      src="./public/img/12.jpg"
    />
    <span
      className="item-text"
    >
      loadJson
    </span>
  </article>
</article>
`;

exports[`MainEditorAssetHeader test operate file test remove file else click removeFile button should remove file from assetTree 1`] = `
<article
  className="asset-content"
>
  <article
    className="file-item "
    onClick={[Function]}
  >
    <img
      onDragStart={[Function]}
      src="./public/img/12.jpg"
    />
    <span
      className="item-text"
    >
      2.json
    </span>
  </article>
</article>
`;

exports[`MainEditorAssetHeader test operate file test remove file else removeFile button's disabled props should == false 1`] = `
<article
  className="tree-header"
>
  <div
    className="header-item"
  >
    <button
      onClick={[Function]}
    >
      addFolder
    </button>
  </div>
  <div
    className="header-item"
  >
    <button
      disabled={false}
      onClick={[Function]}
    >
      removeFolder
    </button>
  </div>
  <div
    className="header-item"
  >
    <button
      disabled={false}
      onClick={[Function]}
    >
      removeFile
    </button>
  </div>
  <div
    className="header-item"
  >
    <input
      className="file-upload"
      multiple={true}
      onChange={[Function]}
      type="file"
    />
  </div>
</article>
`;

exports[`MainEditorAssetHeader test operate file test remove file if not set specific file, removeFile button's disabled props should == true  1`] = `
<article
  className="tree-header"
>
  <div
    className="header-item"
  >
    <button
      onClick={[Function]}
    >
      addFolder
    </button>
  </div>
  <div
    className="header-item"
  >
    <button
      disabled={false}
      onClick={[Function]}
    >
      removeFolder
    </button>
  </div>
  <div
    className="header-item"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      removeFile
    </button>
  </div>
  <div
    className="header-item"
  >
    <input
      className="file-upload"
      multiple={true}
      onChange={[Function]}
      type="file"
    />
  </div>
</article>
`;

exports[`MainEditorAssetHeader test operate treeNode test add folder else, add folder into specific treeNode 1`] = `
<article
  className="tree-content"
>
  <ul
    className="wonder-tree-node"
  >
    <li
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "border": "1px solid red",
        }
      }
    >
      <img
        src="./public/img/12.jpg"
      />
      asset
    </li>
    <ul
      className="wonder-tree-node"
      draggable={true}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    >
      <li
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "background": "red",
          }
        }
      >
        <img
          src="./public/img/12.jpg"
        />
        folder1
      </li>
      <ul
        className="wonder-tree-node"
        draggable={true}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <li
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
          style={
            Object {
              "border": "1px solid red",
            }
          }
        >
          <img
            src="./public/img/12.jpg"
          />
          newFolder
        </li>
      </ul>
    </ul>
    <ul
      className="wonder-tree-node"
      draggable={true}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    >
      <li
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "border": "1px solid red",
          }
        }
      >
        <img
          src="./public/img/12.jpg"
        />
        folder2
      </li>
    </ul>
  </ul>
</article>
`;

exports[`MainEditorAssetHeader test operate treeNode test add folder if not set specific treeNode, add folder into root treeNode 1`] = `
<article
  className="tree-content"
>
  <ul
    className="wonder-tree-node"
  >
    <li
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "border": "1px solid red",
        }
      }
    >
      <img
        src="./public/img/12.jpg"
      />
      asset
    </li>
    <ul
      className="wonder-tree-node"
      draggable={true}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    >
      <li
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "border": "1px solid red",
          }
        }
      >
        <img
          src="./public/img/12.jpg"
        />
        folder1
      </li>
    </ul>
    <ul
      className="wonder-tree-node"
      draggable={true}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    >
      <li
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "border": "1px solid red",
          }
        }
      >
        <img
          src="./public/img/12.jpg"
        />
        folder2
      </li>
    </ul>
    <ul
      className="wonder-tree-node"
      draggable={true}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    >
      <li
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "border": "1px solid red",
          }
        }
      >
        <img
          src="./public/img/12.jpg"
        />
        newFolder
      </li>
    </ul>
  </ul>
</article>
`;

exports[`MainEditorAssetHeader test operate treeNode test remove folder else click removeFolder button should remove folder from assetTree 1`] = `
<article
  className="tree-content"
>
  <ul
    className="wonder-tree-node"
  >
    <li
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "border": "1px solid red",
        }
      }
    >
      <img
        src="./public/img/12.jpg"
      />
      asset
    </li>
    <ul
      className="wonder-tree-node"
      draggable={true}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    >
      <li
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "border": "1px solid red",
          }
        }
      >
        <img
          src="./public/img/12.jpg"
        />
        folder2
      </li>
    </ul>
  </ul>
</article>
`;

exports[`MainEditorAssetHeader test operate treeNode test remove folder else if set rootTreeNode is currentAssetTreeNode, removeFolder button's disabled props should == true 1`] = `
<article
  className="tree-header"
>
  <div
    className="header-item"
  >
    <button
      onClick={[Function]}
    >
      addFolder
    </button>
  </div>
  <div
    className="header-item"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      removeFolder
    </button>
  </div>
  <div
    className="header-item"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      removeFile
    </button>
  </div>
  <div
    className="header-item"
  >
    <input
      className="file-upload"
      multiple={true}
      onChange={[Function]}
      type="file"
    />
  </div>
</article>
`;

exports[`MainEditorAssetHeader test operate treeNode test remove folder else if set rootTreeNode is currentTreeNode, removeFolder button's disabled props should == true 1`] = `
<article
  className="tree-header"
>
  <div
    className="header-item"
  >
    <button
      onClick={[Function]}
    >
      addFolder
    </button>
  </div>
  <div
    className="header-item"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      removeFolder
    </button>
  </div>
  <div
    className="header-item"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      removeFile
    </button>
  </div>
  <div
    className="header-item"
  >
    <input
      className="file-upload"
      multiple={true}
      onChange={[Function]}
      type="file"
    />
  </div>
</article>
`;

exports[`MainEditorAssetHeader test operate treeNode test remove folder else removeFolder button's disabled props should == false 1`] = `
<article
  className="tree-header"
>
  <div
    className="header-item"
  >
    <button
      onClick={[Function]}
    >
      addFolder
    </button>
  </div>
  <div
    className="header-item"
  >
    <button
      disabled={false}
      onClick={[Function]}
    >
      removeFolder
    </button>
  </div>
  <div
    className="header-item"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      removeFile
    </button>
  </div>
  <div
    className="header-item"
  >
    <input
      className="file-upload"
      multiple={true}
      onChange={[Function]}
      type="file"
    />
  </div>
</article>
`;

exports[`MainEditorAssetHeader test operate treeNode test remove folder if not set specific treeNode, removeFolder button's disabled props should == true  1`] = `
<article
  className="tree-header"
>
  <div
    className="header-item"
  >
    <button
      onClick={[Function]}
    >
      addFolder
    </button>
  </div>
  <div
    className="header-item"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      removeFolder
    </button>
  </div>
  <div
    className="header-item"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      removeFile
    </button>
  </div>
  <div
    className="header-item"
  >
    <input
      className="file-upload"
      multiple={true}
      onChange={[Function]}
      type="file"
    />
  </div>
</article>
`;
